--- a/app-demo-value.yaml
+++ b/app-demo-value.yaml
@@ -2,13 +2,13 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 5
+replicaCount: 2
 
 image:
-  repository: rockman88v/demoapp
+  repository: trongduonghsht/myapp
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: 7
+  tag: v1
 
 imagePullSecrets: []
 nameOverride: ""
@@ -41,13 +41,13 @@ service:
   port: 80
 
 ingress:
-  enabled: true
+  enabled: false
   className: "nginx"
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: demoapp.viettq.com
+    - host: demoapp.trongdd.com
       paths:
         - path: /
           pathType: ImplementationSpecific
